icones redes sociais

--- a/index.html
+++ b/index.html
@@ -22,7 +22,23 @@
     </header>
         
     <main>
-        <h1></h1>
+        <section id="ficha">
+            <img src="" alt="" class="foto">
+            <h1>Beatriz Lima</h1>
+            <p>Estudante de Desenvolvimento Web.
+                Apaixonada por tecnologia e sempre em busca de novos desafios.
+                <div id="social">
+                    <a href="https://www.linkedin.com/in/maria-beatriz-da-silva-alves-de-lima-a20b16207/" target="_blank" rel="nofollow"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/BiaAlvesDeLima?tab=repositories" target="_blank" rel="nofollow"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.youtube.com/@cursoemvideo" target="_blank" rel="nofollow"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.instagram.com/bias2alan/" target="_blank" rel="nofollow"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.cursoemvideo.com/cursos/" target="_blank" rel="nofollow"><i class="fa-solid fa-globe"></i></a>
+                </div>
+            </p>
+        </section>
+        <section id="detalhes">
+
+        </section>
     </main>
 
     <footer>
