--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
     <main>
         <section id="ficha">
-            <img src="" alt="" class="foto">
+            <img src="imagens/logonovo-g.png" alt="" class="foto">
             <h1>Beatriz Lima</h1>
             <p>Estudante de Desenvolvimento Web.
                 Apaixonada por tecnologia e sempre em busca de novos desafios.
