area de formacoes

--- a/index.html
+++ b/index.html
@@ -137,6 +137,62 @@
 
             <article id="formacao">
                 <h2><i class="fa-solid fa-graduation-cap"></i> Formação </h2>
+
+                <div id="formacao-container">
+                    <div class="curso">
+                        <p class="periodo">2009-2011</p>
+                        <h3 class="instituicao">Escola Estadual Doutor Antônio Moraes Barros</h3>
+                        <p class="titulacao">Ensino Médio</p>
+                    </div>
+
+                     <div class="curso">
+                        <p class="periodo">2009-2011</p>
+                        <h3 class="instituicao">Escola Estadual Doutor Antônio Moraes Barros</h3>
+                        <p class="titulacao">Inglês Básico</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2012-2015</p>
+                        <h3 class="instituicao">Centro de Estudo de Línguas</h3>
+                        <p class="titulacao">Língua Espanhola</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2010-2012</p>
+                        <h3 class="instituicao">Patrulha Mirim de Itápolis</h3>
+                        <p class="titulacao">Informática Básica</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2020</p>
+                        <h3 class="instituicao">Via Rápida Cursos</h3>
+                        <p class="titulacao">Recepção e Atendimento ao Cliente</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2023</p>
+                        <h3 class="instituicao">Udemy Business</h3>
+                        <p class="titulacao">Linguagem de Programação</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2023</p>
+                        <h3 class="instituicao">JA Brasil</h3>
+                        <p class="titulacao">Desenvolvimento e programação Web</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2023-2024</p>
+                        <h3 class="instituicao">Curso em Vídeo - Gustavo Guanabara</h3>
+                        <p class="titulacao">HTML5 e CSS3</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2024-2025</p>
+                        <h3 class="instituicao">Curso em Vídeo - Gustavo Guanabara</h3>
+                        <p class="titulacao">JavaScript</p>
+                    </div>
+                </div>
             </article> <!-- Fim article#formacao-->
 
             <article id="projetos">
