--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="projeto">
                         <img src="imagens/projeto-01-videos.jpg" alt="Projeto 1" class="foto">
                         <div class="projeto-info">
-                            <p class="periodo">2023</p>
+                            <p class="periodo">2024</p>
                             <h3 class="titulo">Projeto de Vídeos</h3>
                             <p>Projeto construído para treinar a inserção de vídeos em nosso site.</p>
                             <details class="descricao">
@@ -215,7 +215,7 @@
                     <div class="projeto">
                         <img src="imagens/projeto-02-cordel.jpg" alt="Projeto 2" class="foto">
                         <div class="projeto-info">
-                            <p class="periodo">2023</p>
+                            <p class="periodo">2024</p>
                             <h3 class="titulo">Projeto Cordel</h3>
                             <p>Projeto construído para treinar efeito paralax em imagens.</p>
                             <details class="descricao">
@@ -228,9 +228,35 @@
                     <div class="projeto">
                         <img src="imagens/projeto-03-android.jpg" alt="Projeto 3" class="foto">
                         <div class="projeto-info">
-                            <p class="periodo">2023</p>
+                            <p class="periodo">2024</p>
                             <h3 class="titulo">Projeto Android</h3>
                             <p>Projeto construído para treinar conteúdos e imagens dinâmicas.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais ...</summary>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit rerum ratione minima magni ipsa aut repellendus, alias modi amet voluptas provident, itaque vero harum libero maiores, non blanditiis dolorem sint.</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto">
+                        <img src="imagens/projeto-04-links.jpg" alt="Projeto 4" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2024</p>
+                            <h3 class="titulo">Projeto Redes Sociais</h3>
+                            <p>Projeto construído para treinar responsividade, múltiplos media queries e divulgar as suas principais redes sociais.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais ...</summary>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit rerum ratione minima magni ipsa aut repellendus, alias modi amet voluptas provident, itaque vero harum libero maiores, non blanditiis dolorem sint.</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto">
+                        <img src="imagens/projeto-05-login.jpg" alt="Projeto 5" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2024</p>
+                            <h3 class="titulo">Projeto Login</h3>
+                            <p>Projeto construído para treinar responsividade e formulários em uma das telas mais populares em sistemas.</p>
                             <details class="descricao">
                                 <summary>Saiba mais ...</summary>
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit rerum ratione minima magni ipsa aut repellendus, alias modi amet voluptas provident, itaque vero harum libero maiores, non blanditiis dolorem sint.</p>
